--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,12 @@
 <div class="banner">
     <div class="header-container flex flex-space-between flex-center">
-        <h1 class="brand_name">GTG</h1>
+        <h1 class="brand-name">GTG</h1>
         <nav class="desktop-nav">
             <ul class="flex navbar">
                 <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Shop
-                        <img src="../assets/images/icons/chevron_down.svg" alt="arrow down" class="downarrow-icon">
+                        <img src="../assets/images/icons/chevron_down.svg" alt="arrow down" class="dropdown-icon">
                     </a>
                 </li>
                 <li class="nav-item"><a href="#" class="nav-link">Fragrances</a></li>
@@ -28,9 +28,9 @@
         </button>
         <h2 class="banner-title">Live your best life.</h2>
         <div class="keywords flex">
-            <div class="text"><span>10x</span> power</div>
-            <div class="text"><span>9</span> ingredients</div>
-            <div class="text"><span>20k+</span> happy customers</div>
+            <div class="stat-item"><span>10x</span> power</div>
+            <div class="stat-item"><span>9</span> ingredients</div>
+            <div class="stat-item"><span>20k+</span> happy customers</div>
         </div>
         <button class="btn btn-primary btn-md">Shop Now</button>
     </div>
