product section phase 1

--- a/css/components.css
+++ b/css/components.css
@@ -1,4 +1,18 @@
-/* Buttons */
+:root {
+    /* Button Border Radius */
+    --border-radius: 500px;
+
+    /* Radio Button */
+    --radio-size: 1.25rem;
+    --radio-border-width: 0.063rem;
+    --radio-dot-size: 0.75rem;
+    --radio-grad-start: rgba(3, 46, 21, 0.6);
+    --radio-grad-end: rgba(1, 102, 48, 0.6);
+    --radio-bg: #ffffff;
+}
+
+/* Buttons Style */
+
 .btn {
     display: flex;
     align-items: center;
@@ -38,4 +52,14 @@
 .btn-lg {
     height: 60px;
     font-size: 20px;
+}
+
+.icon-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
