--- a/css/base.css
+++ b/css/base.css
@@ -11,11 +11,11 @@
     --color-primary: #032E15;
     --color-secondary: #0D542B;
     --color-accent: #653B09;
-    --color-grey: #666666;
+    --color-grey: #B8B8B8;
     --color-white: #FFFFFF;
     --color-black: #000000;
-
     --color-nav-items: #162456;
+    --divider-color: #919798;
 
     /* Gradient colors */
     --gradient-button-primary: linear-gradient(180deg, #032E15 0%, #016630 100%);
@@ -27,9 +27,6 @@
     --font-family-base: 'Inter', Arial, sans-serif;
     --font-size-base: 16px;
     --line-height-base: normal;
-
-    /* Button Border Radius */
-    --border-radius: 500px;
 }
 
 html {
