--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,5 @@
 /* Header Styles Starts */
+
 .banner {
     background-image: url("../assets/images/hero_banner.png");
     width: 100%;
@@ -28,9 +29,11 @@
     font-size: 1.875rem;
     line-height: 150%;
 }
+
 .navbar {
     gap: 2rem;
 }
+
 .nav-link {
     font-family: var(--font-family-base);
     font-size: 1rem;
@@ -104,3 +107,190 @@
 }
 
 /* Banner Styles Ends */
+
+/* Product Styles Starts */
+
+.product-container {
+    margin-top: 9.125rem;
+    padding: 0 4rem;
+    display: flex;
+    justify-content: space-between
+}
+
+.product-gallery {
+    width: 38.125rem;
+    display: flex;
+    flex-direction: column;
+
+    .product-preview {
+        position: relative;
+    }
+
+    .product-img {
+        width: 38.125rem;
+        height: 42.063rem;
+        object-fit: cover;
+        border-radius: 0.5rem;
+    }
+
+    .product-nav {
+        position: absolute;
+        bottom: 1.5rem;
+        left: 0;
+        right: 0;
+        padding: 0 1.5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .center-dot-button {
+        gap: 0.5rem;
+
+        img {
+            cursor: pointer;
+        }
+    }
+
+    .product-thumbnails {
+        display: flex;
+        flex-direction: column;
+        gap: 1.875rem;
+        margin-top: 1.875rem;
+
+        .preview-img {
+            width: 8.125rem;
+            height: 8.125rem;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            object-fit: cover;
+        }
+    }
+}
+
+.product-details {
+    width: 38.125rem;
+    display: flex;
+    flex-direction: column;
+
+    .product-title {
+        font-weight: 600;
+        font-size: 2.25rem;
+        line-height: 100%;
+    }
+
+    .rating-section {
+        display: flex;
+        align-items: center;
+        margin-top: 0.5rem;
+        gap: 0.375rem;
+
+        .stars {
+            display: flex;
+            align-items: center;
+            gap: 0.25rem;
+
+            .star-icon {
+                width: 0.813rem;
+                height: 0.813rem;
+            }
+        }
+
+        .rating-number {
+            font-weight: 300;
+            font-size: 0.813rem;
+            line-height: 100%;
+        }
+    }
+
+    .product-description p {
+        font-weight: 300;
+        line-height: 100%;
+        text-align: justify;
+        margin-top: 1.25rem;
+    }
+
+    .product-purchase {
+        .most-popular {
+            margin-top: 1.875rem;
+            border: 0.063rem solid var(--color-grey);
+            border-radius: 0.375rem;
+        }
+
+        .purchase-title {
+            font-weight: 700;
+            font-size: 1.25rem;
+            line-height: 1.5rem;
+            padding: 0.625rem 0;
+            text-align: center;
+            background: var(--gradient-card-header);
+            color: var(--color-white);
+        }
+
+        .single-subscription-selected, .double-subscription-selected {
+            display: flex;
+            align-items: center;
+            padding: 1.375rem 1.625rem;
+
+            .card-title {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+                border-bottom: 0.063rem solid var(--divider-color);
+                padding-bottom: 0.75rem;
+            }
+
+            .radio-input {
+                margin-right: 0.625rem;
+                margin-bottom: 0.75rem;
+            }
+        }
+
+        .single-subscription-not-selected, .double-subscription-not-selected {
+            display: flex;
+            align-items: center;
+            padding: 0.8125rem 1.625rem;
+            border: 0.063rem solid var(--color-grey);
+            border-radius: 0.375rem;
+
+            .card-title {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+            }
+
+            .radio-input {
+                margin-right: 0.625rem;
+            }
+        }
+
+        .double-subscription-selected, .double-subscription-not-selected {
+            margin-top: 0.625rem;
+        }
+
+        .radio-label {
+            font-weight: 300;
+            font-size: 1.25rem;
+            line-height: 1.875rem;
+        }
+
+        .discount-price {
+            font-weight: 700;
+            font-size: 1.25rem;
+            line-height: 1.875rem;
+            margin-right: 0.625rem;
+        }
+
+        .original-price {
+            color: var(--color-grey);
+            font-weight: 300;
+            font-size: 1.25rem;
+            line-height: 1.875rem;
+            text-decoration: line-through;
+        }
+    }
+}
+
+/* Product Styles Ends */
