--- a/css/base.css
+++ b/css/base.css
@@ -12,6 +12,9 @@
     --color-secondary: #0D542B;
     --color-accent: #653B09;
     --color-grey: #B8B8B8;
+    --color-grey-light: #F9F9F9;
+    --color-grey-dark: #919798;
+    --color-grey-text: #6F7577;
     --color-white: #FFFFFF;
     --color-black: #000000;
     --color-nav-items: #162456;
