--- a/css/layout.css
+++ b/css/layout.css
@@ -227,10 +227,12 @@
             color: var(--color-white);
         }
 
-        .single-subscription-selected, .double-subscription-selected {
-            display: flex;
-            align-items: center;
-            padding: 1.375rem 1.625rem;
+        .single-subscription-selected {
+            .card {
+                display: flex;
+                align-items: center;
+                padding: 0.75rem 1.375rem;
+            }
 
             .card-title {
                 display: flex;
@@ -247,12 +249,37 @@
             }
         }
 
-        .single-subscription-not-selected, .double-subscription-not-selected {
-            display: flex;
-            align-items: center;
-            padding: 0.8125rem 1.625rem;
+        .double-subscription-selected {
             border: 0.063rem solid var(--color-grey);
             border-radius: 0.375rem;
+
+            .card {
+                display: flex;
+                align-items: center;
+                padding: 0.75rem 1.375rem;
+            }
+
+            .card-title {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+                border-bottom: 0.063rem solid var(--divider-color);
+                padding-bottom: 0.75rem;
+            }
+
+            .radio-input {
+                margin-right: 0.625rem;
+                margin-bottom: 0.75rem;
+            }
+        }
+
+        .single-subscription-not-selected {
+            .card {
+                display: flex;
+                align-items: center;
+                padding: 0.75rem 1.375rem;
+            }
 
             .card-title {
                 display: flex;
@@ -266,7 +293,29 @@
             }
         }
 
-        .double-subscription-selected, .double-subscription-not-selected {
+        .double-subscription-not-selected {
+            .card {
+                display: flex;
+                align-items: center;
+                border: 0.063rem solid var(--color-grey);
+                border-radius: 0.375rem;
+                padding: 0.75rem 1.375rem;
+            }
+
+            .card-title {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+            }
+
+            .radio-input {
+                margin-right: 0.625rem;
+            }
+        }
+
+        .double-subscription-selected,
+        .double-subscription-not-selected {
             margin-top: 0.625rem;
         }
 
@@ -289,6 +338,181 @@
             font-size: 1.25rem;
             line-height: 1.875rem;
             text-decoration: line-through;
+        }
+
+        .card-body {
+            padding: 0.25rem 1.375rem 1.625rem 1.375rem;
+        }
+
+        .fragrance,
+        .included {
+            padding-left: 1.4375rem;
+        }
+
+        .fragrance-title,
+        .included-title {
+            font-weight: 300;
+            font-size: 1rem;
+            line-height: 100%;
+            margin-bottom: 0.9375rem;
+        }
+
+        .fragrance-2 {
+            margin-top: 12px;
+        }
+
+        .fragrance-container {
+            display: flex;
+            gap: 10px;
+
+            .original,
+            .lily,
+            .rose {
+                background-color: var(--color-grey-light);
+                padding: 10px;
+                width: 127px;
+                height: 145px;
+                border-radius: 5px;
+            }
+
+            .product-img {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 12px;
+
+                img {
+                    width: 55px;
+                    height: 95px;
+                    object-fit: cover;
+                }
+            }
+
+            .label {
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 100%;
+                color: var(--color-grey-dark);
+            }
+
+            input[type="radio"]:checked+.label {
+                color: var(--gradient-text);
+            }
+        }
+
+        .included {
+            margin-top: 28px;
+
+            .included-item-container {
+                display: flex;
+                gap: 15px;
+            }
+
+            .included-item-monthly {
+                width: 165px;
+                height: 220px;
+            }
+
+            .included-item-onetime {
+                width: 328px;
+                height: 220px;
+            }
+
+            .included-item-monthly,
+            .included-item-onetime {
+                border: 1px solid var(--color-grey);
+                border-radius: 6px;
+                padding: 10px;
+
+                .label {
+                    font-weight: 300;
+                    font-size: 16px;
+                    line-height: 100%;
+                    color: var(--color-grey-text);
+                }
+
+                .product-img-lg {
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-top: 12px;
+
+                    img {
+                        width: 84px;
+                        height: 144px;
+                        object-fit: cover;
+                    }
+                }
+
+                .product-img {
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    margin-top: 34px;
+
+                    img {
+                        width: 55px;
+                        height: 95px;
+                        object-fit: cover;
+                    }
+                }
+
+                span {
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 100%;
+                    color: var(--color-primary);
+                }
+            }
+        }
+
+        .details {
+            margin-top: 20px;
+            padding-left: 23px;
+
+            .details-list {
+
+                .detail-item {
+                    display: flex;
+                    align-items: center;
+                    gap: 6px;
+                    font-weight: 300;
+                    font-size: 14px;
+                    line-height: 20px;
+                    text-transform: titlecase;
+                    margin-bottom: 10px;
+
+                    span {
+                        font-weight: 700;
+                    }
+
+                    img {
+                        width: 14px;
+                        height: 14px;
+                    }
+                }
+            }
+        }
+
+        .best-seller-img {
+            position: relative;
+        }
+
+        .best-seller {
+            font-weight: 700;
+            font-size: 7px;
+            line-height: 100%;
+            color: var(--color-white);
+            background: var(--gradient-bg);
+            padding: 5px 6px;
+            width: fit-content;
+            border-radius: 8px 0 8px 0;
+            position: absolute;
+            top: -10px;
+            right: 5px;
         }
     }
 }
