--- a/css/base.css
+++ b/css/base.css
@@ -19,6 +19,8 @@
     --color-black: #000000;
     --color-nav-items: #162456;
     --divider-color: #919798;
+    --accordion-border: #CDCDCD;
+    --accordion-body: #666666;
 
     /* Gradient colors */
     --gradient-button-primary: linear-gradient(180deg, #032E15 0%, #016630 100%);
