--- a/css/layout.css
+++ b/css/layout.css
@@ -481,6 +481,99 @@
 
 /* Product Styles Ends */
 
+/* =========================
+   COLLECTION SECTION
+========================= */
+
+.collection-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 145px;
+    padding: 0 64px;
+}
+
+/* LEFT */
+.collection-title {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 100%;
+    margin-bottom: 32px;
+}
+
+.accordion {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+/* ACCORDION */
+.accordion-item {
+    background-color: #fff;
+    border-radius: 8px;
+    border: 1px solid var(--accordion-border);
+    width: 626px;
+}
+
+.accordion-header {
+    padding: 24px 32px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--color-primary);
+}
+
+.accordion-icon {
+    position: relative;
+    width: 24px;
+    height: 24px;
+}
+
+.accordion-icon::before,
+.accordion-icon::after {
+    content: "";
+    position: absolute;
+    transition: transform 0.3s ease;
+}
+
+.accordion-icon::before {
+    width: 24px;
+    height: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.accordion-icon::after {
+    width: 24px;
+    height: 24px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.accordion-item[open] .accordion-icon::after {
+    transform: translateX(-50%) scaleY(0);
+}
+
+.accordion-body {
+    padding: 24px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--accordion-body);
+}
+
+/* RIGHT IMAGE */
+.collection-image .spray-img {
+    width: 587px;
+    height: 712px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
 /* Footer Styles Starts */
 
 .site-footer {
