--- a/partials/stats.html
+++ b/partials/stats.html
@@ -6,7 +6,7 @@
 
         <div class="accordion">
 
-            <details class="accordion-item" open>
+            <details class="accordion-item">
                 <summary class="accordion-header">
                     <span>Signature Scents</span>
                     <span class="accordion-icon"></span>
