--- a/partials/stats.html
+++ b/partials/stats.html
@@ -67,3 +67,27 @@
     </div>
 
 </div>
+
+<div class="stats-container">
+
+    <div class="stat-item">
+        <h3 class="stat-number">84%</h3>
+        <p class="stat-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+    </div>
+
+    <div class="stat-item">
+        <h3 class="stat-number">78%</h3>
+        <p class="stat-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+    </div>
+
+    <div class="stat-item">
+        <h3 class="stat-number">89%</h3>
+        <p class="stat-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+    </div>
+
+    <div class="stat-item">
+        <h3 class="stat-number">90%</h3>
+        <p class="stat-label">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+    </div>
+
+</div>
