--- a/css/layout.css
+++ b/css/layout.css
@@ -27,7 +27,6 @@
     -webkit-text-fill-color: transparent;
     font-weight: 800;
     font-size: 1.875rem;
-    line-height: 150%;
 }
 
 .navbar {
@@ -78,7 +77,6 @@
     font-size: 3.5rem;
     margin-top: 1.875rem;
     margin-bottom: 1.875rem;
-    line-height: 100%;
 }
 
 .keywords {
@@ -92,7 +90,6 @@
         margin-right: 5rem;
         font-weight: 300;
         font-size: 1.375rem;
-        line-height: 100%;
 
         span {
             font-weight: 700;
@@ -101,7 +98,6 @@
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
-            line-height: 100%;
         }
     }
 }
@@ -176,7 +172,6 @@
     .product-title {
         font-weight: 600;
         font-size: 2.25rem;
-        line-height: 100%;
     }
 
     .rating-section {
@@ -199,13 +194,11 @@
         .rating-number {
             font-weight: 300;
             font-size: 0.813rem;
-            line-height: 100%;
         }
     }
 
     .product-description p {
         font-weight: 300;
-        line-height: 100%;
         text-align: justify;
         margin-top: 1.25rem;
     }
@@ -220,7 +213,6 @@
         .purchase-title {
             font-weight: 700;
             font-size: 1.25rem;
-            line-height: 1.5rem;
             padding: 0.625rem 0;
             text-align: center;
             background: var(--gradient-card-header);
@@ -276,13 +268,11 @@
         .radio-label {
             font-weight: 300;
             font-size: 1.25rem;
-            line-height: 1.875rem;
         }
 
         .discount-price {
             font-weight: 700;
             font-size: 1.25rem;
-            line-height: 1.875rem;
             margin-right: 0.625rem;
         }
 
@@ -290,7 +280,6 @@
             color: var(--color-grey);
             font-weight: 300;
             font-size: 1.25rem;
-            line-height: 1.875rem;
             text-decoration: line-through;
         }
 
@@ -316,7 +305,6 @@
         .included-title {
             font-weight: 300;
             font-size: 1rem;
-            line-height: 100%;
             margin-bottom: 0.9375rem;
         }
 
@@ -355,7 +343,6 @@
             .label {
                 font-weight: 300;
                 font-size: 0.875rem;
-                line-height: 100%;
                 color: var(--color-grey-dark);
             }
 
@@ -391,7 +378,6 @@
                 .label {
                     font-weight: 300;
                     font-size: 1rem;
-                    line-height: 100%;
                     color: var(--color-grey-text);
                 }
 
@@ -426,7 +412,6 @@
                 span {
                     font-weight: 700;
                     font-size: 1rem;
-                    line-height: 100%;
                     color: var(--color-primary);
                 }
             }
@@ -444,7 +429,6 @@
                     gap: 0.375rem;
                     font-weight: 300;
                     font-size: 0.875rem;
-                    line-height: 1.25rem;
                     text-transform: titlecase;
                     margin-bottom: 0.625rem;
 
@@ -467,7 +451,6 @@
         .best-seller {
             font-weight: 700;
             font-size: 0.4375rem;
-            line-height: 100%;
             color: var(--color-white);
             background: var(--gradient-bg);
             padding: 0.3125rem 0.375rem;
@@ -498,7 +481,6 @@
 .collection-title {
     font-weight: 600;
     font-size: 36px;
-    line-height: 100%;
     margin-bottom: 32px;
 }
 
@@ -526,7 +508,6 @@
     cursor: pointer;
     font-weight: 700;
     font-size: 20px;
-    line-height: 24px;
     color: var(--color-primary);
 }
 
@@ -552,7 +533,6 @@
     padding: 24px;
     font-weight: 300;
     font-size: 16px;
-    line-height: 20px;
     color: var(--accordion-body);
 }
 
@@ -563,6 +543,45 @@
     object-fit: cover;
     border-radius: 20px;
 }
+
+/* Collection Styles Ends */
+
+/* =========================
+   Stats SECTION
+========================= */
+
+.stats-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 100px;
+    background: var(--gradient-bg);
+    padding: 56px 170px;
+}
+
+.stat-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    width: 215px;
+
+    .stat-number {
+        font-weight: 700;
+        font-size: 40px;
+        text-align: center;
+        color: var(--color-white);
+    }
+
+    .stat-label {
+        font-weight: 300;
+        font-size: 16px;
+        text-align: center;
+        color: var(--color-white);
+    }
+}
+
+/* Stats Styles Ends */
 
 /* Footer Styles Starts */
 
@@ -588,7 +607,6 @@
     .footer-brand {
         font-weight: 700;
         font-size: 42px;
-        line-height: 100%;
         margin-bottom: 40px;
     }
 
@@ -615,7 +633,6 @@
         text-decoration: none;
         font-weight: 300;
         font-size: 14px;
-        line-height: 150%;
     }
 
     /* Social */
@@ -634,7 +651,6 @@
     .newsletter-title {
         font-weight: 700;
         font-size: 16px;
-        line-height: 150%;
         color: var(--color-white);
         margin-bottom: 24px;
     }
@@ -653,14 +669,12 @@
         color: var(--color-white);
         font-size: 16px;
         font-weight: 300;
-        line-height: 150%;
         height: 50px;
     }
 
     .newsletter-note {
         font-weight: 300;
         font-size: 12px;
-        line-height: 150%;
     }
 
     .newsletter-note a {
